# qq_talk

./: README.md  bot.py  pyproject.toml  requirements.txt
plugins/AI_talk/: __init__.py  ai_talk.py  gpt_text.py
plugins/Emoji/: __init__.py  emojis.py
plugins/Task/: __init__.py  execute.py  task.py  text.py
plugins/ai_main/: ai_chat.py
plugins/main/: __init__.py  ai_chat.py
plugins/messages/: messages_group_464362636.json
plugins/repository/: emojis.json
qq_talk/: bot.py  pyproject.toml
qq_talk/src/plugins/messages/: messages_private_2740954024.json
qq_talk_main/: bot.py  pyproject.toml
qq_talk_main/plugins/ai_main/: __init__.py
qq_talk_main/plugins/messages/: messages_group_820870102.json  messages_private_2740954024.json
repository/: 2740954024_chat_history.json  chat_history.json  emojis.json
repository/talk/: messages_2740954024.json  messages_user_1657172041.json  messages_user_2740954024.json  messages_user_3412975145.json
src/plugins/: ai_chat.py  gpt_text.py
src/plugins/messages/: messages_group_621074871.json
