[project]
name = "qq_talk"
version = "0.1.0"
description = "qq_talk"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins","src.plugins.ai_chat"]
builtin_plugins = []
